perf: use virtual threads for terminal readers